--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
     <div>
         <button id="replay-button" onclick="replay()" style="opacity:1%;">Replay</button>
     </div>
+    <footer>
+        <p>
+            <a href="https://github.com/NatalliaPahosava/Boca-trivia">View Soursce code on GitHub</a>
+        </p>
+    </footer>
 </body>
 <script src="trivia-script.js"></script>
 </html>
