--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
     <footer>
         <p>
-            <a href="https://github.com/NatalliaPahosava/Boca-trivia">View Soursce code on GitHub</a>
+            <a href="https://github.com/NatalliaPahosava/Boca-trivia" target="_blanck">View Soursce code on GitHub</a>
         </p>
     </footer>
 </body>
