--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
     <link rel="stylesheet" href="trivia-styles.css">
 </head>
 <body>
+    <media></media>
     <div id="question-container">
         <h1>Boca Trivia</h1>
+        <iframe src="https://giphy.com/embed/10FwycrnAkpshW" width="480" height="360" frameBorder="0" class="giphy-embed" 
+        allowFullScreen></iframe>
         <h2 id="question">The capital of Florida is Miami.</h2>
     </div>
     <div class="tr-fls-button">   
